--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">
         <div class="container">
         <nav>
-            <img src="img.jpg" class="">
+            <img src="" class="">
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
